Fixing some bugs

--- a/A2_Comp_Project/app/src/main/assets/Desmos.html
+++ b/A2_Comp_Project/app/src/main/assets/Desmos.html
@@ -8,10 +8,10 @@
     <meta name="description" content="The HTML5 Herald">
     <meta name="author" content="SitePoint">
 
-    <link rel="stylesheet" href="css/styles.css?v=1.0">
+    <!--<link rel="stylesheet" href="css/styles.css?v=1.0">-->
 
-    <!--<script src="https://www.desmos.com/api/v0.7/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>-->
-    <script src="calculator.js"></script>
+    <script src="https://www.desmos.com/api/v0.7/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
+    <!--<script src="calculator.js"></script>-->
 </head>
 
 <body>
